--- a/public/trucks.css
+++ b/public/trucks.css
@@ -1,1 +1,17 @@
-/* coming soon */
+.right {
+    position: relative;
+    left: 0;
+    max-width: 50%;
+    text-align: left;
+    float: left;
+}
+.left {
+    position: relative;
+    left: 0;
+    max-width: 50%;
+    width: 300px;
+    float: left;
+}
+h3 {
+    color: blue;
+}
