--- a/public/trucks.css
+++ b/public/trucks.css
@@ -1,17 +1,72 @@
-.right {
-    position: relative;
-    left: 0;
-    max-width: 50%;
-    text-align: left;
-    float: left;
+* {
+    box-sizing: border-box;
 }
-.left {
-    position: relative;
-    left: 0;
-    max-width: 50%;
-    width: 300px;
-    float: left;
+body {
+    font-family: Helvetica, Arial, sans-serif;
 }
-h3 {
-    color: blue;
+
+form {
+    background: #e7e7e7;
+    padding: 10px;
+}
+
+fieldset {
+    padding-top: 10px;
+    margin-bottom: 10px;
+}
+
+.form_input {
+    margin-bottom: 10px;
+}
+
+textarea {
+    resize: none;
+}
+
+input[type=text],
+textarea {
+    font-size: 14px;
+    padding: 8px;
+    border: none;
+}
+
+input[type=submit],
+button[type=button] {
+    display: inline-block;
+    color: #666;
+    font-size: 14px;
+    padding: 8px 10px;
+    margin: 10px 0 0 5px;
+    background: aquamarine;
+    border: none;
+    border-radius: 3px;
+}
+
+input[name=website],
+input[name=Facebook],
+input[name=Twitter] {
+    display: inline-block;
+    width: 400px;
+}
+
+ul {
+    list-style-type: none;
+}
+
+li {
+    margin: 6px 0;
+}
+
+.delete_link {
+    display: inline-block;
+    background: pink;
+    padding: 2px 5px;
+    border: 1px solid grey;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.delete_link:hover {
+    background: red;
+    font-weight: bold;
 }
